<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/uprava"
        android:id="@+id/textView2"
        android:textColor="@color/boja"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/upravitelj"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textColor="@color/boja"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/prodaja"
        android:id="@+id/textView4"
        android:textColor="@color/boja"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/prodavatelj"
        android:id="@+id/textView5"
        android:textColor="@color/boja"
        android:textSize="18sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView4"
        android:textSize="18sp"
        android:textColorLink="@color/boja"
        android:text="@string/kontakt"
        android:autoLink="email"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/postprodaja"
        android:id="@+id/textView7"
        android:textColor="@color/boja"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/direktor"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="@color/boja"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/adresa"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/boja"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/adresa1"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="@color/boja"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tel"
        android:id="@+id/textView11"
        android:textSize="18sp"
        android:textColor="@color/boja"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tel1"
        android:id="@+id/phone"
        android:textSize="18sp"
        android:textColor="@color/boja"
        android:layout_below="@+id/textView10"
        android:layout_toEndOf="@+id/textView11"
        android:layout_marginLeft="5dp"
        android:autoLink="phone"
        android:textColorLink="@color/boja"/>

    <ImageView
        android:id="@+id/btnZastupnici"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ikona"
        android:contentDescription="@string/zastupnici"
        android:maxHeight="20dp"
        android:layout_below="@+id/phone"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/zastupnici"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnZastupnici"
        android:layout_below="@+id/btnZastupnici"
        android:gravity="center"
        android:text="@string/zastupnici"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />
</RelativeLayout>