<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageButton
        android:id="@+id/a1"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/a1"
        android:contentDescription="@string/a1" />

    <ImageButton
        android:id="@+id/a3"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/a1"
        android:background="@drawable/a3"
        android:contentDescription="@string/a3" />

    <ImageButton
        android:id="@+id/a4"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/a1"
        android:layout_below="@+id/a1"
        android:layout_marginTop="30dp"
        android:background="@drawable/a4"
        android:contentDescription="@string/a4" />

    <ImageView
        android:id="@+id/a5"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_above="@+id/a6"
        android:layout_alignStart="@+id/a3"
        android:background="@drawable/a5"
        android:contentDescription="@string/a5" />

    <ImageView
        android:id="@+id/a6"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/a4"
        android:layout_below="@+id/a4"
        android:layout_marginTop="30dp"
        android:background="@drawable/a6"
        android:contentDescription="@string/a6" />

    <ImageView
        android:id="@+id/a7"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/a5"
        android:layout_alignTop="@+id/a6"
        android:background="@drawable/a7"
        android:contentDescription="@string/a7" />

    <ImageView
        android:id="@+id/a8"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/a6"
        android:layout_below="@+id/a6"
        android:layout_marginTop="30dp"
        android:background="@drawable/a8"
        android:contentDescription="@string/a8" />

    <ImageView
        android:id="@+id/q2"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_above="@+id/q3"
        android:layout_alignStart="@+id/a7"
        android:background="@drawable/q2"
        android:contentDescription="@string/q2" />

    <ImageView
        android:id="@+id/q3"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/a8"
        android:layout_below="@+id/a8"
        android:layout_marginTop="30dp"
        android:background="@drawable/q3"
        android:contentDescription="@string/q3" />

    <ImageView
        android:id="@+id/q5"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/q2"
        android:layout_alignTop="@+id/q3"
        android:background="@drawable/q5"
        android:contentDescription="@string/q5" />

    <ImageView
        android:id="@+id/q7"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/q3"
        android:layout_below="@+id/q3"
        android:layout_marginTop="30dp"
        android:background="@drawable/q7"
        android:contentDescription="@string/q7" />

    <ImageView
        android:id="@+id/tt"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/q5"
        android:layout_alignTop="@+id/q7"
        android:background="@drawable/tt"
        android:contentDescription="@string/tt" />

    <TextView
        android:id="@+id/a1txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/a1"
        android:layout_below="@+id/a1"
        android:layout_marginEnd="46dp"
        android:gravity="center"
        android:text="@string/a1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/a3txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/a5"
        android:layout_alignTop="@+id/a1txt"
        android:layout_marginEnd="45dp"
        android:gravity="center"
        android:text="@string/a3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/a4txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/a6txt"
        android:layout_below="@+id/a4"
        android:gravity="center"
        android:text="@string/a4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/a5txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/a3txt"
        android:layout_below="@+id/a5"
        android:gravity="center"
        android:text="@string/a5"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/a6txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/a8txt"
        android:layout_below="@+id/a6"
        android:gravity="center"
        android:text="@string/a6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/a7txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/q2txt"
        android:layout_below="@+id/a7"
        android:gravity="center"
        android:text="@string/a7"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/a8txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/q3txt"
        android:layout_below="@+id/q2"
        android:gravity="center"
        android:text="@string/a8"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/q2txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/q5txt"
        android:layout_below="@+id/a8"
        android:gravity="center"
        android:text="@string/q2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/q3txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/q7txt"
        android:layout_alignTop="@+id/q5txt"
        android:gravity="center"
        android:text="@string/q3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/q5txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tttxt"
        android:layout_below="@+id/q5"
        android:gravity="center"
        android:text="@string/q5"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/q7txt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/a1txt"
        android:layout_alignTop="@+id/tttxt"
        android:gravity="center"
        android:text="@string/q7"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tttxt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/a3txt"
        android:layout_below="@+id/tt"
        android:gravity="center"
        android:text="@string/tt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />
</RelativeLayout>