<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/prsten"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/btnModels"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:background="@drawable/ikona"
        android:contentDescription="@string/ikona"
        android:maxHeight="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnNews"
        android:gravity="center"
        android:text="@string/modeli"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/btnNews"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/btnModels"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ikona"
        android:contentDescription="@string/ikona"
        android:maxHeight="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/news"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/btnAbout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignTop="@+id/btnNews"
        android:background="@drawable/ikona"
        android:contentDescription="@string/ikona"
        android:maxHeight="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView4"
        android:gravity="center"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/audi"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/audi"
        android:contentDescription="@string/ikona"
        android:maxHeight="20dp" />


</RelativeLayout>
