<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/iskustvo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/ime"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/imeUnos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ime"
        android:backgroundTint="@color/boja"
        android:inputType="text"
        android:textColor="@color/boja"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imeUnos"
        android:layout_marginTop="20dp"
        android:text="@string/prezime"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prezimeUnos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prezime"
        android:backgroundTint="@color/boja"
        android:inputType="text"
        android:textColor="@color/boja"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prezimeUnos"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailUnos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:backgroundTint="@color/boja"
        android:inputType="textEmailAddress"
        android:textColor="@color/boja"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/grad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailUnos"
        android:layout_marginTop="20dp"
        android:text="@string/grad"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/grad"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/btnSpremi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/spremiText"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="40dp"
        android:background="@drawable/ikona"
        android:contentDescription="@string/spremi"
        android:maxHeight="20dp" />

    <TextView
        android:id="@+id/spremiText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSpremi"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/spremi"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/boja"
        android:textSize="14sp" />


</RelativeLayout>
